k8s/aks-ssl/products-store-app-deployment-v1.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  namespace: products-store-ns
  name: products-store-deployment
spec:
  selector:
    matchLabels:
      app: products-store-app
  replicas: 2
  template:
    metadata:
      labels:
        app: products-store-app
    spec:
      containers:
      - name: products-store-app
        image: dloperab/products-store-mvc:v1.0
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  namespace: products-store-ns
  name: products-store-service
spec:
  selector:
    app: products-store-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
