k8s/aks-ssl/products-store-mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: products-store-ns
  name: products-store-mssql-deployment
spec:
  replicas: 1
  selector:
     matchLabels:
       app: products-store-mssql
  template:
    metadata:
      labels:
        app: products-store-mssql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: products-store-mssql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: products-store-ns
  name: products-store-mssql-service
spec:
  selector:
    app: products-store-mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
      nodePort: 30200
  type: NodePort
