k8s/aks-ssl/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: products-store-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: products-store-service
          servicePort: 80
        path: /(.*)
  - host: productsstore.52.146.84.66.nip.io # change the IP address here
    http:
      paths:
      - backend:
          serviceName: products-store-service
          servicePort: 80
        path: /(.*)
