k8s/aks-ssl/ssl-tls-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ssl-tls-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - productsstore.52.146.84.66.nip.io # update IP address here
      secretName: products-store-cert
  rules:
  - host: productsstore.52.146.84.66.nip.io # update IP address here
    http:
      paths:
      - backend:
          serviceName: products-store-service
          servicePort: 80
        path: /
